kubernetes/main/core/network/cloudflared/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  ingress:
    # Prometheus
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: "TCP"
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: nginx-external
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
    # https://developers.cloudflare.com/cloudflare-one/connections/connect-networks/deploy-tunnels/tunnel-with-firewall/
    - toFQDNs:
        - matchName: region1.v2.argotunnel.com
        - matchName: region2.v2.argotunnel.com
      toPorts:
        - ports:
            - port: "7844"
              protocol: "TCP"
            - port: "7844"
              protocol: "UDP"
    - toFQDNs:
        - matchName: api.cloudflare.com
        - matchName: update.argotunnel.com
        - matchPattern: "*.cloudflareaccess.com"
        - matchName: pqtunnels.cloudflareresearch.com
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
